# bosmapper-server

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: develop.yml  main.yml  master.yml
app/: draw.py  main.py  models.py
config/: .env  .env.template  Caddyfile
export/: draw.py
export/data/: 20200530.geojson  20200609.geojson  base.geojson  voedselbos_20201017.geojson
export/template/: map.html  styles.css
scripts/: backup.py
thunder-tests/: thunderActivity.json  thunderCollection.json  thunderclient.json
