[tool.poetry]
name = "bosmapper-server"
version = "2.1.0"
description = "FastAPI & Mongo powering the bosmapper backend"
authors = ["Damien Allen <dev@dallen.co>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68"
uvicorn = "^0.15"
mongoengine = "^0.24"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
flake8 = "^4.0"
black = "^22.3"
isort = "^5.10"

[build-system]
requires = ["poetry>=1.1.0"]
build-backend = "poetry.masonry.api"
